updated package.json after fork

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@trifoia/zcrmsdk",
+  "name": "@arminschleicher/zcrmsdk",
   "version": "0.1.1",
   "description": "Node SDK for Zoho CRM",
   "main": "lib/js/ZCRMRestClient",
@@ -34,10 +34,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Trifoia/zcrm-nodejs-sdk.git"
+    "url": "git+https://github.com/arminschleicher/zcrm-nodejs-sdk"
   },
   "bugs": {
-    "url": "https://github.com/Trifoia/zcrm-nodejs-sdk/issues"
+    "url": "https://github.com/arminschleicher/zcrm-nodejs-sdk/issues"
   },
-  "homepage": "https://github.com/Trifoia/zcrm-nodejs-sdk#readme"
+  "homepage": "https://github.com/arminschleicher/zcrm-nodejs-sdk#readme"
 }
